# wasm-wallet

./: .gitignore  Cargo.toml  README.md
scripts/: build.sh  test.sh  test.sh  
src/: crypto.rs  ethereum.rs  lib.rs  types.rs  utils.rs  wallet.rs
tests/: web.rs
