[package]
name = "wasm-wallet"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance Ethereum wallet library compiled to WebAssembly"
license = "MIT"
repository = "https://github.com/yourusername/wasm-wallet"
keywords = ["ethereum", "wallet", "wasm", "crypto", "blockchain"]
categories = ["cryptography", "wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM 바인딩
wasm-bindgen = "0.2"
js-sys = "0.3"

# 암호화 라이브러리
secp256k1 = { version = "0.28", features = ["rand-std", "recovery"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

# 이더리움 관련
ethers-core = { version = "2.0", default-features = false }
rlp = "0.5"
hex = "0.4"

# 암호화 및 보안
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.6", features = ["zeroize_derive"] }

# BIP39 니모닉
bip39 = { version = "2.0", features = ["rand"] }

# 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# 유틸리티
thiserror = "1.0"
base64 = "0.21"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Storage",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
tokio = { version = "1.0", features = ["macros", "rt"] }

[profile.release]
opt-level = "s"          # 크기 최적화
lto = true               # Link Time Optimization
codegen-units = 1        # 단일 코드젠 유닛으로 최적화
panic = "abort"          # 패닉 시 중단